--- a/spec.html
+++ b/spec.html
@@ -8528,6 +8528,33 @@
       1. Return a List whose sole element is this |ExportDeclaration|.
     </emu-alg>
   </emu-clause>
+
+  <emu-clause id="sec-static-semantics-toplevellexicallydeclarednames" type="sdo" aoid="TopLevelLexicallyDeclaredNames">
+    <h1>Static Semantics: TopLevelLexicallyDeclaredNames</h1>
+    <emu-grammar>StatementList : StatementList StatementListItem</emu-grammar>
+    <emu-alg>
+      1. Let _names_ be TopLevelLexicallyDeclaredNames of |StatementList|.
+      1. Append to _names_ the elements of the TopLevelLexicallyDeclaredNames of |StatementListItem|.
+      1. Return _names_.
+    </emu-alg>
+    <emu-grammar>StatementListItem : Statement</emu-grammar>
+    <emu-alg>
+      1. Return a new empty List.
+    </emu-alg>
+    <emu-grammar>StatementListItem : Declaration</emu-grammar>
+    <emu-alg>
+      1. If |Declaration| is <emu-grammar>Declaration : HoistableDeclaration</emu-grammar> , then
+        1. Return &laquo; &raquo;.
+      1. Return the BoundNames of |Declaration|.
+    </emu-alg>
+    <emu-note>
+      <p>At the top level of a function, or script, function declarations are treated like var declarations rather than like lexical declarations.</p>
+    </emu-note>
+    <emu-grammar>LabelledStatement : LabelIdentifier `:` LabelledItem</emu-grammar>
+    <emu-alg>
+      1. Return a new empty List.
+    </emu-alg>
+  </emu-clause>
 <!-- insert sdos here -->
 </emu-clause>
 
@@ -17711,30 +17738,6 @@
       </ul>
     </emu-clause>
 
-    <emu-clause id="sec-block-static-semantics-toplevellexicallydeclarednames">
-      <h1>Static Semantics: TopLevelLexicallyDeclaredNames</h1>
-      <emu-see-also-para op="TopLevelLexicallyDeclaredNames"></emu-see-also-para>
-      <emu-grammar>StatementList : StatementList StatementListItem</emu-grammar>
-      <emu-alg>
-        1. Let _names_ be TopLevelLexicallyDeclaredNames of |StatementList|.
-        1. Append to _names_ the elements of the TopLevelLexicallyDeclaredNames of |StatementListItem|.
-        1. Return _names_.
-      </emu-alg>
-      <emu-grammar>StatementListItem : Statement</emu-grammar>
-      <emu-alg>
-        1. Return a new empty List.
-      </emu-alg>
-      <emu-grammar>StatementListItem : Declaration</emu-grammar>
-      <emu-alg>
-        1. If |Declaration| is <emu-grammar>Declaration : HoistableDeclaration</emu-grammar> , then
-          1. Return &laquo; &raquo;.
-        1. Return the BoundNames of |Declaration|.
-      </emu-alg>
-      <emu-note>
-        <p>At the top level of a function, or script, function declarations are treated like var declarations rather than like lexical declarations.</p>
-      </emu-note>
-    </emu-clause>
-
     <emu-clause id="sec-block-static-semantics-toplevellexicallyscopeddeclarations">
       <h1>Static Semantics: TopLevelLexicallyScopedDeclarations</h1>
       <emu-see-also-para op="TopLevelLexicallyScopedDeclarations"></emu-see-also-para>
@@ -19297,15 +19300,6 @@
         1. If _item_ is <emu-grammar>LabelledItem : FunctionDeclaration</emu-grammar> , return *true*.
         1. Let _subStmt_ be the |Statement| of _item_.
         1. Return IsLabelledFunction(_subStmt_).
-      </emu-alg>
-    </emu-clause>
-
-    <emu-clause id="sec-labelled-statements-static-semantics-toplevellexicallydeclarednames">
-      <h1>Static Semantics: TopLevelLexicallyDeclaredNames</h1>
-      <emu-see-also-para op="TopLevelLexicallyDeclaredNames"></emu-see-also-para>
-      <emu-grammar>LabelledStatement : LabelIdentifier `:` LabelledItem</emu-grammar>
-      <emu-alg>
-        1. Return a new empty List.
       </emu-alg>
     </emu-clause>
 
